@@ -7,6 +7,7 @@ Version 1.0rc to be released
 - Fixed ticket #18: renderPartial should enable output caching to avoid session start issue (Qiang)
 - Added $source parameter to YiiBase::t() (Qiang)
 - Added CGettextMessageSource (Qiang)
+- Added CHttpCookie.httpOnly property (Qiang)
 
 Version 1.0b October 24, 2008
 -----------------------------
